--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,7 @@ name: 🤖 Deploy Hugo site to Pages
 on:
   push:
     branches: 
-      - master
+      - main
   workflow_dispatch:
 
 permissions:
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3.0.0
         with:
-          hugo-version: '0.146.3'
+          hugo-version: '0.148.2'
           extended: true
             
       - name: Update hugo modules
