:sparkles: Change summary

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,8 +14,8 @@ contactInfo:
 
 # Blinking text
 summary:
-  - Ph.D
-  - Renewable Energies
-  - Green Hydrogen
-  - Production Processes
-  - Chemical Engineering
+  - Hydrogen Technologies
+  - Sustainable Energy Technologies
+  - Engineering
+  - Production Processes—ink formulation, coating, drying and wetting
+  - Research & Development
