--- a/data/en/sections/01-about.yaml
+++ b/data/en/sections/01-about.yaml
@@ -7,7 +7,7 @@ section:
   showOnNavbar: false
 
 # Professional informations
-designation: PhD Student in Mechanical and Process Engineering
+designation: Hydrogen Technologies | Sustainable Energy Technologies | Engineering | Production Processes—ink formulation, coating, drying and wetting | Research & Development
 summary: |
         Currently, I am pursuing a PhD in the Chair of Particle Science and Technology, led by Prof. Doris Segets, focuses on hydrogen generation that is part of project H2Giga and subproject prometH2eus
 
