:sparkles: Change summary

--- a/data/en/sections/01-about.yaml
+++ b/data/en/sections/01-about.yaml
@@ -9,7 +9,7 @@ section:
 # Professional informations
 designation: Hydrogen Technologies | Sustainable Energy Technologies | Engineering | Production Processes—ink formulation, coating, drying and wetting | Research & Development
 summary: |
-        Currently, I am pursuing a PhD in the Chair of Particle Science and Technology, led by Prof. Doris Segets, focuses on hydrogen generation that is part of project H2Giga and subproject prometH2eus
+        An experienced R&D professional with a demonstrated track record of scaling up anode production, with a particular focus on water electrolysis and fuel cells in recent years.
 
 
 socialLinks:
