--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -15,7 +15,8 @@ contactInfo:
 # Blinking text
 summary:
   - Hydrogen Technologies
-  - Sustainable Energy Technologies
+  - Sustainable Energy Solutions
   - Engineering
-  - Production Processes—ink formulation, coating, drying and wetting
+  - Production Processes
+  - Process Chain Development
   - Research & Development
