--- a/data/en/sections/01-about.yaml
+++ b/data/en/sections/01-about.yaml
@@ -11,9 +11,9 @@ designation: Hydrogen Technologies | Sustainable Energy Solutions | Engineering 
 summary: |
         I am an experienced R&D professional with a proven track record in scaling up advanced anode production technologies, with a particular focus on water electrolysis and fuel cell applications in recent years.
 
-        My expertise lies in bridging the gap between laboratory research and industrial implementation, driving innovations from concept through pilot-scale development to commercial readiness. I am highly skilled in process optimization, materials characterization, and cross-functional collaboration, supported by an agile approach that enables me to adapt quickly, manage complex projects, and deliver results in dynamic environments.
+        My expertise lies in bridging the gap between laboratory research and industrial implementation, driving innovations from concept through pilot-scale development to commercial readiness. I am highly skilled in process optimisation, materials characterisation, and cross-functional collaboration, supported by an agile approach that enables me to adapt quickly, manage complex projects, and deliver results in dynamic environments.
 
-        Recognized for a strong problem-solving mindset, hands-on technical expertise, and the ability to align cutting-edge research with practical, scalable outcomes, I am passionate about accelerating innovation in the clean energy sector.
+        Recognised for a strong problem-solving mindset, hands-on technical expertise, and the ability to align cutting-edge research with practical, scalable outcomes, I am passionate about accelerating innovation in the clean energy sector.
 
 
 socialLinks:
