--- a/data/en/sections/06-publications.yaml
+++ b/data/en/sections/06-publications.yaml
@@ -1,6 +1,6 @@
 # section information
 section:
-  name: Publications
+  name: Research articles
   id: publications
   enable: true
   weight: 6
@@ -12,16 +12,10 @@ section:
 buttons:
   - name: All
     filter: "all"
-  - name: Electrochemistry
-    filter: "electrochemistry"
-  - name: Materials Science
-    filter: "materials-science"
-  - name: Image Processing
-    filter: "image-processing"
-  - name: Environmental Engineering
-    filter: "environmental-engineering"
-  - name: Fuel Cells
-    filter: "fuel-cells"
+  - name: Peer-reviewed
+    filter: "reviewed"
+  - name: Published conference abstracts
+    filter: "abstract"
 
 publications:
 - title: "A Proof-of-Principle Demonstration: Exploring the Effect of Anode Layer Microstructure on the Alkaline Oxygen Evolution Reaction"
@@ -57,7 +51,7 @@ publications:
   paper:
     summary: "Study exploring the effect of Ni-Co-O anode microstructure, tuned by solvent composition and drying temperature, influences connectivity, roughness, and wettability, thereby affecting mechanical strength, contact resistance, and OER activity, guiding rational anode design."
     url: https://doi.org/10.1002/adfm.202421352
-  categories: ["electrochemistry", "materials-science"]
+  categories: ["reviewed"]
   tags: ["Electrocatalysis", "Oxygen Evolution Reaction", "Microstructure", "Functional Materials"]
 - title: "From Small-Area Observations to Insight: Surface-Feature-Extrapolation of Anodes for Alkaline Oxygen Evolution Reaction"
   publishedIn:
@@ -84,106 +78,8 @@ publications:
   paper:
     summary: "Study that desmonstrates MSDQ framework quantifies cobalt oxide anode surfaces using AFM, linking roughness, area, and homogeneity to OER activity, enabling precise characterisation, benchmarking, and manufacturing optimisation of electrocatalytic anodes."
     url: https://doi.org/10.1002/cctc.202301461
-  categories: ["electrochemistry", "image-processing"]
+  categories: ["reviewed"]
   tags: ["Oxygen Evolution Reaction", "Catalysis", "Materials Science"]
-- title: "Unveiling a Binder-Free Approach through Plasma Treatment of NiCoO₂ Anode Multi-Layer Coatings for Alkaline Water Electrolysis"
-  publishedIn:
-    name: "ECS Meeting Abstracts (ECS)"
-    date: "22 November 2024"
-    url: https://doi.org/10.1149/MA2024-02282132mtgabs
-  authors:
-    - name: Mohit Chatwani
-      url: https://orcid.org/0009-0007-3471-6049
-    - name: Christian Marcks
-      url: https://orcid.org/0000-0003-3618-4246
-    - name: Adarsh Jain
-      url: https://orcid.org/0009-0001-6199-8340
-    - name: Timo Wagner
-      url: https://orcid.org/0000-0002-6853-0572
-    - name: Dr. Nicolas Wöhrl
-      url: https://www.researchgate.net/profile/Nicolas-Woehrl
-    - name: Prof. Dr. Anna K. Mechler
-      url: https://orcid.org/0000-0002-0491-514X
-    - name: Dr. Vineetha Vinayakumar
-      url: https://orcid.org/0000-0002-6707-8051
-    - name: Prof. Dr. Doris Segets
-      url: https://orcid.org/0000-0003-3102-2934
-  paper:
-    summary: "Nitrogen-plasma-treated NiCoO₂ coatings eliminate PFAS binders, improving anode adhesion and OER activity while lowering cost and aligning with EU PFAS restrictions."
-    url: https://doi.org/10.1149/MA2024-02282132mtgabs
-  categories: ["electrochemistry", "materials-science"]
-  tags: ["Binder-Free Anodes", "Plasma Treatment", "Oxygen Evolution Reaction", "Hydrogen Production"]
-- title: "Understanding the Mechanism of Evaporation-Induced Islands during the Formation of Catalyst Layers and Their Influence on the Alkaline Oxygen Evolution Reaction"
-  publishedIn:
-    name: "ECS Meeting Abstracts (ECS)"
-    date: "22 November 2024"
-    url: https://doi.org/10.1149/MA2024-02282134mtgabs
-  authors:
-    - name: Adarsh Jain
-      url: https://orcid.org/0009-0001-6199-8340
-    - name: Christian Marcks
-      url: https://orcid.org/0000-0003-3618-4246
-    - name: Mohit Chatwani
-      url: https://orcid.org/0009-0007-3471-6049
-    - name: Prof. Dr. Anna K. Mechler
-      url: https://orcid.org/0000-0002-0491-514X
-    - name: Dr. Vineetha Vinayakumar
-      url: https://orcid.org/0000-0002-6707-8051
-    - name: Mohit Chatwani
-      url: https://orcid.org/0009-0007-3471-6049
-  paper:
-    summary: "Shows how drying temperature shapes island morphology in NiCoO₂ catalyst inks, linking microstructure to wettability, bubble dynamics, and OER performance for scalable alkaline anodes."
-    url: https://doi.org/10.1149/MA2024-02282134mtgabs
-  categories: ["electrochemistry", "materials-science"]
-  tags: ["Drying Mechanisms", "Catalyst Layer Morphology", "Oxygen Evolution Reaction", "Nickel Cobalt Oxide"]
-- title: "Mechanochemical Activation of Nickel Oxide Enabling Binder-Free Anodes for Alkaline Water Electrolysis"
-  publishedIn:
-    name: "ECS Meeting Abstracts (ECS)"
-    date: "22 November 2024"
-    url: https://doi.org/10.1149/MA2024-02282133mtgabs
-  authors:
-    - name: Mohit Chatwani
-      url: https://orcid.org/0009-0007-3471-6049
-    - name: Christian Marcks
-      url: https://orcid.org/0000-0003-3618-4246
-    - name: Adarsh Jain
-      url: https://orcid.org/0009-0001-6199-8340
-    - name: Prof. Dr. Anna K. Mechler
-      url: https://orcid.org/0000-0002-0491-514X
-    - name: Dr. Vineetha Vinayakumar
-      url: https://orcid.org/0000-0002-6707-8051
-    - name: Prof. Dr. Doris Segets
-      url: https://orcid.org/0000-0003-3102-2934
-  paper:
-    summary: "Planetary ball-milling activates NiO, yielding stable, binder-free inks that spray-coat onto Ni plates and cut OER overpotential by ~100 mV without delamination."
-    url: https://doi.org/10.1149/MA2024-02282133mtgabs
-  categories: ["electrochemistry", "materials-science"]
-  tags: ["Binder-Free Anodes", "Mechanochemical Activation", "Nickel Oxide", "Oxygen Evolution Reaction"]
-- title: "Investigating Anode Structural Characteristics with Multistage Data Quantification: Influence of Extrinsic Properties of Anodes for Oxidation Evolution Reaction in Alkaline Water Electrolysis"
-  publishedIn:
-    name: "ECS Meeting Abstracts (ECS)"
-    date: "22 November 2024"
-    url: https://doi.org/10.1149/MA2024-02282197mtgabs
-  authors:
-    - name: Adarsh Jain
-      url: https://orcid.org/0009-0001-6199-8340
-    - name: Dr. Vineetha Vinayakumar
-      url: https://orcid.org/0000-0002-6707-8051
-    - name: Dr. André Olean-Oliveira
-      url: https://orcid.org/0000-0002-1716-1420
-    - name: Christian Marcks
-      url: https://orcid.org/0000-0003-3618-4246
-    - name: Mohit Chatwani
-      url: https://orcid.org/0009-0007-3471-6049
-    - name: Prof. Dr. Anna K. Mechler
-      url: https://orcid.org/0000-0002-0491-514X
-    - name: Corina Andronescu
-      url: https://orcid.org/0000-0002-1227-1209
-  paper:
-    summary: "MSDQ statistically links AFM-derived roughness, area, and homogeneity of spray-coated anodes to OER activity, enabling full-scale surface extrapolation for rational alkaline electrode design."
-    url: https://doi.org/10.1149/MA2024-02282197mtgabs
-  categories: ["electrochemistry", "image-processing"]
-  tags: ["Multistage Data Quantification", "Surface Morphology", "Oxygen Evolution Reaction", "Alkaline Water Electrolysis"]
 - title: "Electrochemical Insights into Hydrogen Peroxide Generation on Carbon Electrodes: Influence of Defects, Oxygen Functional Groups, and Alkali Metals in the Electrolyte"
   publishedIn:
     name: "ACS Catalysis (ACS)"
@@ -209,7 +105,7 @@ publications:
   paper:
     summary: "Defects, oxygen groups, and alkali-metal cations modulate two-electron ORR on graphite and glassy carbon, uncovering mechanisms that optimise selective, metal-free H₂O₂ electrosynthesis."
     url: https://doi.org/10.1021/acscatal.4c04734
-  categories: ["electrochemistry", "materials-science"]
+  categories: ["reviewed"]
   tags: ["Hydrogen Peroxide", "Oxygen Reduction Reaction", "Carbon Electrodes", "Surface Chemistry"]
 - title: "Holistic Evaluation of Ni-Co-O Anodes: Integrated Workflow from Ink Formulation to Plasma Post-Processing for Alkaline Water Electrolysis"
   publishedIn:
@@ -262,7 +158,7 @@ publications:
   paper:
     summary: "Systematic workflow from ink formulation to plasma-treated Ni-Co-O spray coatings yields binder-free anodes with enhanced porosity, wettability and 43 mV lower overpotential at 100 mA cm⁻² in alkaline OER."
     url: https://doi.org/10.31224/4205
-  categories: ["electrochemistry", "materials-science"]
+  categories: ["reviewed"]
   tags: ["Alkaline Water Electrolysis", "Plasma Processing", "Spray Coating", "Binder-Free Anodes", "Ni-Co-O"]
 - title: "Polyacrylic Acid Functionalized Superparamagnetic Iron-Oxide Supraparticles for Highly Efficient Adsorption and Removal of Contaminants from Water"
   publishedIn:
@@ -301,7 +197,7 @@ publications:
   paper:
     summary: "Magnetic PAA-coated iron-oxide supraparticles adsorb metals and dyes with up to 670 mg g⁻¹ capacity and recover magnetically in 20 s, enabling rapid, low-cost water purification."
     url: https://doi.org/10.1016/j.jwpe.2024.106025
-  categories: ["materials-science", "environmental-engineering"]
+  categories: ["reviewed"]
   tags: ["Water Purification", "Adsorption", "Magnetic Nanoparticles", "Polyacrylic Acid"]
 - title: "The Impact of Ink Processing on Key Characteristics of Platinum Detachment and Pore Structure to Optimize Fuel Cell Performance"
   publishedIn:
@@ -340,5 +236,103 @@ publications:
   paper:
     summary: "Compares stirring, sonication, and wet milling of Pt/C inks; links particle size, Pt detachment, and pore architecture to PEMFC efficiency, highlighting optimal processing trade-offs."
     url: https://doi.org/10.1016/j.ijhydene.2025.04.450
-  categories: ["fuel-cells", "materials-science"]
+  categories: ["reviewed"]
   tags: ["PEMFC", "Catalyst Ink Processing", "Platinum Detachment", "Pore Structure", "Fuel Cell Performance"]
+- title: "Understanding the Mechanism of Evaporation-Induced Islands during the Formation of Catalyst Layers and Their Influence on the Alkaline Oxygen Evolution Reaction"
+  publishedIn:
+    name: "ECS Meeting Abstracts (ECS)"
+    date: "22 November 2024"
+    url: https://doi.org/10.1149/MA2024-02282134mtgabs
+  authors:
+    - name: Adarsh Jain
+      url: https://orcid.org/0009-0001-6199-8340
+    - name: Christian Marcks
+      url: https://orcid.org/0000-0003-3618-4246
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+    - name: Prof. Dr. Anna K. Mechler
+      url: https://orcid.org/0000-0002-0491-514X
+    - name: Dr. Vineetha Vinayakumar
+      url: https://orcid.org/0000-0002-6707-8051
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+  paper:
+    summary: "Shows how drying temperature shapes island morphology in NiCoO₂ catalyst inks, linking microstructure to wettability, bubble dynamics, and OER performance for scalable alkaline anodes."
+    url: https://doi.org/10.1149/MA2024-02282134mtgabs
+  categories: ["abstract"]
+  tags: ["Drying Mechanisms", "Catalyst Layer Morphology", "Oxygen Evolution Reaction", "Nickel Cobalt Oxide"]
+- title: "Investigating Anode Structural Characteristics with Multistage Data Quantification: Influence of Extrinsic Properties of Anodes for Oxidation Evolution Reaction in Alkaline Water Electrolysis"
+  publishedIn:
+    name: "ECS Meeting Abstracts (ECS)"
+    date: "22 November 2024"
+    url: https://doi.org/10.1149/MA2024-02282197mtgabs
+  authors:
+    - name: Adarsh Jain
+      url: https://orcid.org/0009-0001-6199-8340
+    - name: Dr. Vineetha Vinayakumar
+      url: https://orcid.org/0000-0002-6707-8051
+    - name: Dr. André Olean-Oliveira
+      url: https://orcid.org/0000-0002-1716-1420
+    - name: Christian Marcks
+      url: https://orcid.org/0000-0003-3618-4246
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+    - name: Prof. Dr. Anna K. Mechler
+      url: https://orcid.org/0000-0002-0491-514X
+    - name: Corina Andronescu
+      url: https://orcid.org/0000-0002-1227-1209
+  paper:
+    summary: "MSDQ statistically links AFM-derived roughness, area, and homogeneity of spray-coated anodes to OER activity, enabling full-scale surface extrapolation for rational alkaline electrode design."
+    url: https://doi.org/10.1149/MA2024-02282197mtgabs
+  categories: ["abstract"]
+  tags: ["Multistage Data Quantification", "Surface Morphology", "Oxygen Evolution Reaction", "Alkaline Water Electrolysis"]
+- title: "Unveiling a Binder-Free Approach through Plasma Treatment of NiCoO₂ Anode Multi-Layer Coatings for Alkaline Water Electrolysis"
+  publishedIn:
+    name: "ECS Meeting Abstracts (ECS)"
+    date: "22 November 2024"
+    url: https://doi.org/10.1149/MA2024-02282132mtgabs
+  authors:
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+    - name: Christian Marcks
+      url: https://orcid.org/0000-0003-3618-4246
+    - name: Adarsh Jain
+      url: https://orcid.org/0009-0001-6199-8340
+    - name: Timo Wagner
+      url: https://orcid.org/0000-0002-6853-0572
+    - name: Dr. Nicolas Wöhrl
+      url: https://www.researchgate.net/profile/Nicolas-Woehrl
+    - name: Prof. Dr. Anna K. Mechler
+      url: https://orcid.org/0000-0002-0491-514X
+    - name: Dr. Vineetha Vinayakumar
+      url: https://orcid.org/0000-0002-6707-8051
+    - name: Prof. Dr. Doris Segets
+      url: https://orcid.org/0000-0003-3102-2934
+  paper:
+    summary: "Nitrogen-plasma-treated NiCoO₂ coatings eliminate PFAS binders, improving anode adhesion and OER activity while lowering cost and aligning with EU PFAS restrictions."
+    url: https://doi.org/10.1149/MA2024-02282132mtgabs
+  categories: ["abstract"]
+  tags: ["Binder-Free Anodes", "Plasma Treatment", "Oxygen Evolution Reaction", "Hydrogen Production"]
+- title: "Mechanochemical Activation of Nickel Oxide Enabling Binder-Free Anodes for Alkaline Water Electrolysis"
+  publishedIn:
+    name: "ECS Meeting Abstracts (ECS)"
+    date: "22 November 2024"
+    url: https://doi.org/10.1149/MA2024-02282133mtgabs
+  authors:
+    - name: Mohit Chatwani
+      url: https://orcid.org/0009-0007-3471-6049
+    - name: Christian Marcks
+      url: https://orcid.org/0000-0003-3618-4246
+    - name: Adarsh Jain
+      url: https://orcid.org/0009-0001-6199-8340
+    - name: Prof. Dr. Anna K. Mechler
+      url: https://orcid.org/0000-0002-0491-514X
+    - name: Dr. Vineetha Vinayakumar
+      url: https://orcid.org/0000-0002-6707-8051
+    - name: Prof. Dr. Doris Segets
+      url: https://orcid.org/0000-0003-3102-2934
+  paper:
+    summary: "Planetary ball-milling activates NiO, yielding stable, binder-free inks that spray-coat onto Ni plates and cut OER overpotential by ~100 mV without delamination."
+    url: https://doi.org/10.1149/MA2024-02282133mtgabs
+  categories: ["abstract"]
+  tags: ["Binder-Free Anodes", "Mechanochemical Activation", "Nickel Oxide", "Oxygen Evolution Reaction"]
