:sparkles: Hindi and Kannada AI translations

--- a/data/en/sections/04-education.yaml
+++ b/data/en/sections/04-education.yaml
@@ -64,7 +64,7 @@ degrees:
   timeframe: 2013 - 2017
   institution:
     name: Visvesvaraya Technological University 
-    url: https://vtu.ac.in/
+    url: https://vtu.ac.in/en/
     logo: /images/education/vtu-white.webp
     darkLogo: /images/education/vtu-dark.webp
   customSections:
