:bug: Fix logo mpi

--- a/data/de/sections/04-education.yaml
+++ b/data/de/sections/04-education.yaml
@@ -31,8 +31,8 @@ degrees:
   icon: fa-atom
   timeframe: Jan 2022 - Dez 2025
   institution:
-    name: Max-Planck-Institut für chemische Energiekonversion
-    url: https://www.mpi-magdeburg.mpg.de/
+    name: Max-Planck-Institut für Chemische Energiekonversion
+    url: https://imprs.cec.mpg.de/en/research/students/adagalale-jinadath
     logo: /images/education/mpi-white.webp
     darkLogo: /images/education/mpi-dark.webp
   customSections:
