--- a/data/en/sections/04-education.yaml
+++ b/data/en/sections/04-education.yaml
@@ -31,7 +31,7 @@ degrees:
   timeframe: Jan 2022 - Dec 2025
   institution:
     name: Max Planck Institute for Chemical Energy Conversion
-    url: https://www.mpi-magdeburg.mpg.de/
+    url: https://imprs.cec.mpg.de/en/research/students/adagalale-jinadath
     logo: /images/education/mpi-white.webp
     darkLogo: /images/education/mpi-dark.webp
   customSections:
