--- a/data/hi/sections/04-education.yaml
+++ b/data/hi/sections/04-education.yaml
@@ -33,7 +33,7 @@ degrees:
   timeframe: जनवरी 2022 - दिसंबर 2025
   institution:
     name: मैक्स प्लैंक इंस्टीट्यूट फॉर केमिकल एनर्जी कन्वर्जन
-    url: https://www.mpi-magdeburg.mpg.de/
+    url: https://imprs.cec.mpg.de/en/research/students/adagalale-jinadath
     logo: /images/education/mpi-white.webp
     darkLogo: /images/education/mpi-dark.webp
   customSections:
