--- a/data/kn/sections/04-education.yaml
+++ b/data/kn/sections/04-education.yaml
@@ -31,7 +31,7 @@ degrees:
   timeframe: ಜನವರಿ 2022 - ಡಿಸೆಂಬರ್ 2025
   institution:
     name: ಮ್ಯಾಕ್ಸ್ ಪ್ಲ್ಯಾಂಕ್ ಇನ್‌ಸ್ಟಿಟ್ಯೂಟ್ ಫಾರ್ ಕೆಮಿಕಲ್ ಎನರ್ಜಿ ಕನ್ವರ್ಶನ್
-    url: https://www.mpi-magdeburg.mpg.de/
+    url: https://imprs.cec.mpg.de/en/research/students/adagalale-jinadath
     logo: /images/education/mpi-white.webp
     darkLogo: /images/education/mpi-dark.webp
   customSections:
